[gd_scene load_steps=4 format=3 uid="uid://ekj5buk0hn2w"]

[ext_resource type="Script" path="res://assets/scripts/gui.gd" id="1_axgjw"]

[sub_resource type="InputEventKey" id="InputEventKey_o5ud2"]
ctrl_pressed = true

[sub_resource type="Shortcut" id="Shortcut_1nrpy"]
events = [SubResource("InputEventKey_o5ud2")]

[node name="GUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_axgjw")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 38.0
grow_horizontal = 2
color = Color(0.252028, 0.252028, 0.252028, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.9, 0.9)

[node name="OpenFileButton" type="Button" parent="ColorRect/HBoxContainer"]
layout_mode = 2
tooltip_text = "Open file"
mouse_default_cursor_shape = 2
text = "Open"

[node name="SaveAsButton" type="Button" parent="ColorRect/HBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Save As"

[node name="SaveButton" type="Button" parent="ColorRect/HBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
shortcut = SubResource("Shortcut_1nrpy")
text = "Save"

[node name="OpenFileDialog" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 4
size = Vector2i(512, 512)
ok_button_text = "Open"
file_mode = 0
access = 2

[node name="SaveAsDialog" type="FileDialog" parent="."]
initial_position = 4
size = Vector2i(512, 512)
ok_button_text = "Save"
access = 2

[connection signal="pressed" from="ColorRect/HBoxContainer/OpenFileButton" to="." method="_on_open_file_button_pressed"]
[connection signal="pressed" from="ColorRect/HBoxContainer/SaveAsButton" to="." method="_on_save_as_button_pressed"]
[connection signal="pressed" from="ColorRect/HBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="file_selected" from="SaveAsDialog" to="." method="_on_save_as_dialog_file_selected"]
